# chatagent

./: .env  .gitignore  HUMAN_IN_THE_LOOP.md  LICENSE  README.md  index.html  main.py  pyproject.toml  requirements.txt  test_interrupt.py  test_mcp_integration.py  test_tool_interrupt.py
src/: index.html
src/agent/: react.py
src/models/: __init__.py  deepseek_provider.py  ollama.py  ollama_provider.py
src/tools/: math.py  tavily.py
