[project]
name = "chatagent"
version = "0.1.0"
description = "A lightweight conversational AI application with human-in-the-loop capabilities and MCP tool integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.68.0",
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-ollama>=0.1.0",
    "langchain-deepseek>=0.1.0",
    "langgraph>=0.0.28",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.3.0",
    "uvicorn>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/your-username/chatagent"
Repository = "https://github.com/your-username/chatagent.git"
Documentation = "https://github.com/your-username/chatagent/blob/main/README.md"